syntax = "proto3";

import "ua/marchenko/internal/commonmodels/error.proto";
import "ua/marchenko/internal/commonmodels/artwork/artwork.proto";

option java_package = "ua.marchenko.internal.input.reqreply.artwork";
option java_multiple_files = true;

message CreateArtworkRequest {
  string title = 1;
  string description = 2;
  ArtworkStyle style = 3;
  uint32 width = 4;
  uint32 height = 5;
  string artistId = 6;
}

message CreateArtworkResponse {

  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    Artwork artwork = 1;
  }

  message Failure {
    string message = 100;

    oneof error {
      Error artist_not_found = 1;
    }
  }
}
