syntax = "proto3";

package ua.marchenko.internal.input.reqreply.artwork;

import "ua/marchenko/internal/commonmodels/artwork/artwork_full.proto";

option java_multiple_files = true;

message FindAllArtworksFullRequest {
  uint32 page = 1;
  uint32 limit = 2;
}

message FindAllArtworksFullResponse {

  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    repeated commonmodels.artwork.ArtworkFull artworks = 1;
  }

  message Failure {
    string message = 100;
  }
}
