syntax = "proto3";

package ua.marchenko.internal.input.reqreply.artwork;

import "ua/marchenko/internal/commonmodels/artwork/artwork.proto";
import "ua/marchenko/commonmodels/error.proto";

option java_multiple_files = true;

message FindArtworkByIdRequest {
  string id = 1;
}

message FindArtworkByIdResponse {

  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    commonmodels.artwork.Artwork artwork = 1;
  }

  message Failure {
    string message = 100;

    oneof error {
      ua.marchenko.commonmodels.Error not_found_by_id = 1;
    }
  }
}
